--- a/src/app/components/employe-edit.component.html
+++ b/src/app/components/employe-edit.component.html
@@ -1,1 +1,144 @@
-<p>license-edit works!</p>
+<div class="container-fluid">
+  <div class=" mb-4  p-0 d-flex justify-content-between  ">
+    <div class="pt-4">
+      <h2 class="fs-3 p-0 m-0 d-inline">{{title}} </h2>
+    </div>
+  </div>
+  <div class="row ">
+    <div class="col-md-6">
+      <form [formGroup]="editEmploy" (ngSubmit)="edit()" class="form-group" novalidate autocomplete="off">
+        <div class="row">
+          <div class="col-md-6">
+            <!------------------------ inputs name --------------------------->
+            <div>
+              <label for="name" class=" form-label">Name</label>
+              <div>
+                <input id="name" formControlName="name" class="form-control form-control-sm" type="text"
+                  placeholder="*Name"
+                  [ngClass]="{'is-invalid': (fm['name'].touched || fm['name'].dirty) && !fm['name'].valid }">
+                <div class="spacer"
+                  [ngClass]="{'d-none': (fm['name'].touched || fm['name'].dirty) && !fm['name'].valid }">
+                </div>
+                <span class="invalid-feedback">
+                  <span *ngIf="fm['name'].errors?.['required']">
+                    {{validationForms.required}}
+                  </span>
+                  <span *ngIf="fm['name'].errors?.['minlength']">
+                    {{validationForms.minLength}}
+                  </span>
+                </span>
+              </div>
+            </div>
+            <!------------------------ inputs LastName --------------------------->
+            <div>
+              <label for="lastName" class="form-label">Last Name</label>
+              <div>
+                <input id="lastName" formControlName="lastName" class="form-control form-control-sm" type="text"
+                  placeholder="*last Name"
+                  [ngClass]="{'is-invalid': (fm['lastName'].touched || fm['lastName'].dirty) && !fm['lastName'].valid }">
+                <div class="spacer"
+                  [ngClass]="{'d-none': (fm['lastName'].touched || fm['lastName'].dirty) && !fm['lastName'].valid }">
+                </div>
+                <span class="invalid-feedback">
+                  <span *ngIf="fm['lastName'].errors?.['required']">
+                    {{validationForms.required}}
+                  </span>
+                  <span *ngIf="fm['lastName'].errors?.['minlength']">
+                    {{validationForms.minLength}}
+                  </span>
+                </span>
+              </div>
+            </div>
+            <!------------------------ inputs LastName --------------------------->
+            <div>
+              <label for="age" class="form-label">Age</label>
+              <div>
+                <input id="age" formControlName="age" class="form-control form-control-sm" type="number"
+                  placeholder="*Age"
+                  [ngClass]="{'is-invalid': (fm['age'].touched || fm['age'].dirty) && !fm['age'].valid }">
+                <div class="spacer" [ngClass]="{'d-none': (fm['age'].touched || fm['age'].dirty) && !fm['age'].valid }">
+                </div>
+                <span class="invalid-feedback">
+                  <span *ngIf="fm['age'].errors?.['required']">
+                    {{validationForms.required}}
+                  </span>
+                  <span *ngIf="fm['age'].errors?.['max']">
+                    {{validationForms.maxNum}}
+                  </span>
+                </span>
+              </div>
+            </div>
+            <!------------------------ inputs Work --------------------------->
+            <div>
+              <label for="work" class="form-label">Work</label>
+              <div>
+                <input id="work" formControlName="work" class="form-control form-control-sm" type="text"
+                  placeholder="*Work"
+                  [ngClass]="{'is-invalid': (fm['work'].touched || fm['work'].dirty) && !fm['work'].valid }">
+                <div class="spacer"
+                  [ngClass]="{'d-none': (fm['work'].touched || fm['work'].dirty) && !fm['work'].valid }">
+                </div>
+                <span class="invalid-feedback">
+                  <span *ngIf="fm['work'].errors?.['required']">
+                    {{validationForms.required}}
+                  </span>
+                </span>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <!------------------------ inputs Roll --------------------------->
+            <div>
+              <label for="roll" class="form-label">Roll</label>
+              <div class=" mb-2">
+                <input id="roll" formControlName="roll" class="form-control form-control-sm" type="text"
+                  placeholder="*Roll"
+                  [ngClass]="{'is-invalid': (fm['roll'].touched || fm['roll'].dirty) && !fm['roll'].valid }">
+                <div class="spacer"
+                  [ngClass]="{'d-none': (fm['roll'].touched || fm['roll'].dirty) && !fm['roll'].valid }">
+                </div>
+                <span class="invalid-feedback">
+                  <span *ngIf="fm['roll'].errors?.['required']">
+                    {{validationForms.required}}
+                  </span>
+                </span>
+              </div>
+            </div>
+            <!------------------------ inputs Gender --------------------------->
+            <div>
+              <label for="gender" class="form-label">Gender</label>
+              <select class="form-select mb-2" aria-label="Default select example" formControlName="gender"
+                [ngClass]="{'is-invalid': (fm['gender'].touched || fm['gender'].dirty) && !fm['gender'].valid }">
+                <option disabled selected value="">Select Gender</option>
+                <option *ngFor="let opt of genderOptions" [value]="opt">{{opt}}</option>
+              </select>
+              <div class="spacer"
+                  [ngClass]="{'d-none': (fm['gender'].touched || fm['gender'].dirty) && !fm['gender'].valid }">
+                </div>
+              <span class="invalid-feedback">
+                <span *ngIf="fm['gender'].errors?.['required']">
+                  {{validationForms.required}}
+                </span>
+              </span>
+            </div>
+            <!------------------------ inputs Suspended --------------------------->
+            <div class="form-check mb-2">
+              <input class="form-check-input" type="checkbox" id="suspended" formControlName="suspended">
+              <label class="form-check-label" for="suspended">
+                Suspended
+              </label>
+            </div>
+            <!------------------------ Buttons controls --------------------------->
+            <div class="mt-4">
+              <button class="btn btn-secondary btn-sm" style="width: 45%;" type="button"
+                routerLink='/employes'>ToBack</button>
+              <button class="btn btn-primary btn-sm float-end" style="width: 45%;" type="submit"
+                [disabled]="!editEmploy.valid">Save</button>
+            </div>
+          </div>
+        </div>
+
+      </form>
+    </div>
+  </div>
+</div>
