--- a/src/app/components/employe-detail.component.html
+++ b/src/app/components/employe-detail.component.html
@@ -8,15 +8,17 @@
       <!-- *********************Content***************-->
       <div class="row p-0 ">
         <div class="col-md-1">
-          <div class="fw-bold" *ngFor="let head of heads">{{head}}</div>
+          <div class="fw-bold mb-2" *ngFor="let head of heads">{{head}}</div>
         </div>
         <div class="col-md-11">
-          <div>{{Employ.name}}</div>
-          <div>{{Employ.lastName}}</div>
-          <div>{{Employ.age}}</div>
-          <div>{{Employ.work}}</div>
-          <div>{{Employ.roll}}</div>
-          <div>{{Employ.gender}}</div>
+          <div class="mb-2">{{Employ.name}}</div>
+          <div class="mb-2">{{Employ.lastName}}</div>
+          <div class="mb-2">{{Employ.age}}</div>
+          <div class="mb-2">{{Employ.work}}</div>
+          <div class="mb-2">{{Employ.roll}}</div>
+          <div class="mb-2">{{Employ.gender}}</div>
+          <div class="mb-2">{{Employ.email}}</div>
+
           <div>
             <fa-icon *ngIf="Employ.suspended" [icon]="faSquareCheck" class="text-primary"></fa-icon>
             <fa-icon *ngIf="!Employ.suspended" [icon]="faSquare"></fa-icon>
