--- a/src/app/components/employe-delete.component.html
+++ b/src/app/components/employe-delete.component.html
@@ -25,8 +25,8 @@
         </div>
       </div>
       <div class="mt-4 col-md-4">
-        <button routerLink='/employes' class="btn btn-secondary me-5 w-25">ToBack</button>
-        <button (click)="delete()" class="btn btn-danger w-25">Delete</button>
+        <button routerLink='/employes' class="btn btn-sm btn-secondary me-5 " style="width: 45%">Cancel</button>
+        <button (click)="delete()" class="btn btn-sm btn-danger" style="width: 45%">Delete</button>
       </div>
     </div>
   </div>
