--- a/src/app/components/employe-detail.component.html
+++ b/src/app/components/employe-detail.component.html
@@ -26,8 +26,8 @@
         </div>
       </div>
       <div class="mt-4 col-md-4">
-        <button routerLink='/employes' class="btn btn-secondary me-5 w-25">ToBack</button>
-        <button [routerLink]="['/employes/edit', id]" class="btn btn-primary w-25">Edit</button>
+        <button routerLink='/employes' class="btn btn-sm btn-secondary me-5 " style="width: 45%">Cancel</button>
+        <button [routerLink]="['/employes/edit', id]" class="btn  btn-sm btn-primary " style="width: 45%">Edit</button>
       </div>
     </div>
   </div>
