--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,2 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 
+/* Deja un espacio debajo de los inputs para que cuando tengan error y salga la validacion no mueva los inputs */
+.spacer{
+  margin-top: 1.55rem;
+}
